<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ebuinesscanvas.app.buildingenvironment.Activities.ExpenseListActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_expense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"/>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar_expense"
        android:layout_alignLeft="@+id/toolbar_expense"
        android:layout_alignStart="@+id/toolbar_expense">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtProTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/strActivityName" />

        <com.jaredrummler.materialspinner.MaterialSpinner
            android:id="@+id/spnExpenseType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp" />

        <android.support.v7.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            app:cardElevation="10dp">

        <Button
            android:id="@+id/btnFileUpload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:drawableRight="@drawable/ic_baseline_camera_black"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@color/secondaryTextColor"
            android:paddingLeft="30dip"
            android:paddingRight="30dip"
            android:text="@string/str_upload_bill"
            android:textAllCaps="false"
            android:drawableEnd="@drawable/ic_baseline_camera_black" />
        </android.support.v7.widget.CardView>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilUserName"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            android:hint="@string/amount"
            app:boxStrokeColor="@color/colorPrimaryDark"
            app:boxStrokeWidth="2dp"
            app:errorEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edtRemark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="flagNavigateNext"
            android:inputType="textCapWords"
            android:maxLength="25"
            android:maxLines="1"
            android:textColor="@android:color/black"
            android:drawableRight="@drawable/ic_rupee_indian"
            android:drawableEnd="@drawable/ic_rupee_indian"
            android:theme="@style/AppTheme" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:id="@+id/linerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:orientation="horizontal"
            android:padding="10dp">

        <Button
            android:id="@+id/btnSave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@color/secondaryTextColor"
            android:background="@color/white"
            android:text="@string/strSave"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@color/secondaryTextColor"
            android:background="@color/white"
            android:text="@string/strAdd"
            android:textAllCaps="false" />
        </LinearLayout>


        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />

        </LinearLayout>
    </ScrollView>
    <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabTradingService"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/colorPrimary"
            android:src="@drawable/ic_baseline_done"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

</RelativeLayout>